# xarray_scipy

./: .gitignore  LICENSE  README.md  default.nix  flake.nix  pyproject.toml
.github/workflows/: test.yml
tests/: test_signal.py
xarray_scipy/: signal.py
